--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -21,6 +21,11 @@ $gray: #bbbbbb;
 $light-gray: #e6eef0;
 $white: #ffffff;
 $black: #000000;
+$salmon: #F17581;
+$darkpink: #BF1C65;
+$lightpink: #C5577E;
+$lightviolet:#C6A7C7;
+$yellow: #E2B16D;
 
 // Background Colors
 $background-color: $white;
