--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -1,6 +1,13 @@
 .header {
   position: relative;
-  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  img {
+    &.header-desktop {
+      display: block;
+    }
+  }
 
   .header__overlay {
     position: fixed;
