--- a/_sass/3-modules/_pagination.scss
+++ b/_sass/3-modules/_pagination.scss
@@ -17,7 +17,7 @@
   .previous-link,
   .disabled {
     display: inline-block;
-    width: 140px;
+    width: auto;
     height: 50px;
     line-height: 50px;
     font-size: 12px;
