--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
       <!-- begin header -->
       <header class="header">
-        <img class="logo__image header-desktop" src="{{ site.baseurl }}/images/header.png" alt="{{ site.data.settings.title }}">
+        <a href="{{site.baseurl}}/">
+          <img class="logo__image header-desktop" src="{{ site.baseurl }}/images/header.png" alt="{{ site.data.settings.title }}">
+        </a>
       </header>
